Ya están definidos todos los div, es hora de empezar a llenarlos

--- a/index.html
+++ b/index.html
@@ -24,14 +24,22 @@
             <p></p>
 
             <!-- div formulario -->
-            <div>                
+            <div> 
+                <!-- div botones para el mail o el móvil -->               
                 <div>
                     <div><button><p>Email</p></button></div>
-                    <div><button><p>Mobile number</p> </button></div>
+                    <div><button><p>Mobile number</p></button></div>
                 </div>
-                <div></div>
-                <div></div>
-                <div></div>
+                <!-- div para los inputs mail, pass y sign in -->
+                <div>
+                    <input type="email" required>
+                </div>
+                <div>
+                    <input type="password" required>
+                </div>
+                <div>
+                    <button><p>Sign in</p></button>
+                </div>
             </div>
             
             
