seleccionado y compartimentado todo el material. Ahora hay que darle estilo

--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     <!-- Div general -->
     <div>
         <!-- div imagen izquierda -->
-        <div></div>
+        <div><img src="imagenes/regalo03.jpg" alt=""></div>
         <!-- div formulario derecha -->
         <div>
             <!-- div botones redes sociales -->
             <div>
                 <h2></h2>
-                <div><img src="" alt=""></div>
-                <div><img src="" alt=""></div>
-                <div><img src="" alt=""></div>
+                <div><img src="imagenes/iconos svg/icons8-google.svg" alt=""></div>
+                <div><img src="imagenes/iconos svg/icons8-facebook-f-60.svg" alt=""></div>
+                <div><img src="imagenes/iconos svg/icons8-apple-logo.svg" alt=""></div>
             </div>
             
             <p></p>
