Finalizada la sección Sign in

--- a/index.html
+++ b/index.html
@@ -11,16 +11,21 @@
     <div class="divPrincipal"> 
         <!-- div imagen izquierda -->
         <div class="imagen">
-            <img src="imagenes/regalo03.jpg" alt="Imagen de una chica abriendo un regalo" width="300">
+            <img src="imagenes/regalo03.jpg" alt="Imagen de una chica abriendo un regalo" width="500">
         </div>
         <!-- div formulario derecha -->
         <div class="formulario">
             <!-- div botones redes sociales -->
-            <div class="divIconosRedes">
-                <h2></h2>
-                <div><img src="imagenes/iconos svg/icons8-google.svg" alt=""></div>
-                <div><img src="imagenes/iconos svg/icons8-facebook-f-60.svg" alt=""></div>
-                <div><img src="imagenes/iconos svg/icons8-apple-logo.svg" alt=""></div>
+            <div class="seccionRedes">  
+                <div class="signIn">
+                    <h2>Sign in</h2>
+                </div>          
+                <div class="divIconosRedes">
+                    <div class="iconoRed"><img src="imagenes/iconos svg/icons8-google.svg" alt="Logo Google" width="40"></div>
+                    <div class="iconoRed"><img src="imagenes/iconos svg/icons8-facebook-f-60.svg" alt="Logo Facebook" width="40"></div>
+                    <div class="iconoRed"><img src="imagenes/iconos svg/icons8-apple-logo.svg" alt="Logo Apple" width="40"></div> 
+                </div>
+                
             </div>
             
             <p></p>
