modificación del padding y margin del div principal

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 
             </div>
             
-            <p></p>
+            <p>Or continue width</p>
 
             <!-- div formulario -->
             <div> 
