--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
             <div> 
                 <!-- div botones para el mail o el móvil -->               
                 <div class="divBotonesMailNumber">
-                    <div><button><p>Email</p></button></div>
-                    <div><button><p>Mobile number</p></button></div>
+                    <div><button class="boton"><p>  Email  </p></button></div>
+                    <div><button class="boton2"><p>Mobile number</p></button></div>
                 </div>
                 <!-- div para los inputs mail, pass y sign in -->
                 <div>
