Corregidos flex principal y tamaño de imagen

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="divPrincipal"> 
         <!-- div imagen izquierda -->
         <div class="imagen">
-            <img src="imagenes/regalo03.jpg" alt="Imagen de una chica abriendo un regalo" width="500">
+            <img src="imagenes/regalo04.jpg" alt="Imagen de una chica abriendo un regalo" width="450"  >
         </div>
         <!-- div formulario derecha -->
         <div class="formulario">
@@ -38,14 +38,21 @@
                     <div><button class="boton2"><p>Mobile number</p></button></div>
                 </div>
                 <!-- div para los inputs mail, pass y sign in -->
-                <div>
-                    <input type="email" required>
-                </div>
-                <div>
-                    <input type="password" required>
-                </div>
-                <div>
-                    <button class="boton3"><p>Sign in</p></button>
+                <div class="inputsFormulario">                
+                    <div>
+                        <p>Email address</p>
+                        <input type="email" required>
+                    </div>
+                    <div>
+                        <p>Password</p>
+                        <input type="password" required>
+                        <p>Forgoten your password?</p>
+                    </div>
+                    <div>
+                        <button class="boton3"><p>Sign in</p></button>
+                        <p>Don't you have an account?</p>
+                        <p>Register now</p>                        
+                    </div>
                 </div>
             </div>
 </div>
