Links a los íconos de las redes sociales y hover botones

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
                     <h2>Sign in</h2>
                 </div>          
                 <div class="divIconosRedes">
-                    <div class="iconoRed"><img src="imagenes/iconos svg/icons8-google.svg" alt="Logo Google" width="40"></div>
-                    <div class="iconoRed"><img src="imagenes/iconos svg/icons8-facebook-f-60.svg" alt="Logo Facebook" width="40"></div>
-                    <div class="iconoRed"><img src="imagenes/iconos svg/icons8-apple-logo.svg" alt="Logo Apple" width="40"></div> 
+                    <div class="iconoRed"><a href="https://www.google.com/"><img src="imagenes/iconos svg/icons8-google.svg" alt="Logo Google" width="40" ></a></div>
+                    <div class="iconoRed"><a href="https://www.facebook.com/"><img src="imagenes/iconos svg/icons8-facebook-f-60.svg" alt="Logo Facebook" width="40"></a></div>
+                    <div class="iconoRed"><a href="https://www.apple.com"><img src="imagenes/iconos svg/icons8-apple-logo.svg" alt="Logo Apple" width="40"></a></div> 
                 </div>
                 
             </div>
